cftemplates/legacy/saltmaster.template
{
  	"AWSTemplateFormatVersion" : "2010-09-09",
  	"Description" : "Create an EC2 instance running the Amazon Linux 32 bit AMI. The AMI is chosen based on the region in which the stack is run. This example creates an EC2 security group for the instance to give you SSH access. **WARNING** This template creates one or more Amazon EC2 instances. You will be billed for the AWS resources used if you create a stack from this template.",

  	"Mappings" : {
    		"RegionMap" : {
      			"us-east-1" : {
          			"AMI" : "ami-76f0061f"
	      		},
	      		"us-west-1" : {
	          		"AMI" : "ami-655a0a20"
	      		},
	      		"eu-west-1" : {
	          		"AMI" : "ami-7fd4e10b"
	      		},
	      		"ap-southeast-1" : {
	          		"AMI" : "ami-72621c20"
	      		},
	      		"ap-northeast-1" : {
	          		"AMI" : "ami-8e08a38f"
	      		},
	      		"us-west-2" : {
	          		"AMI" : "ami-a7596e97"
	      		}
	    	}
  	},

  	"Resources" : {
    		"Ec2Instance" : {
      			"Type" : "AWS::EC2::Instance",
      			"Properties" : {
        			"InstanceType" : "t1.micro",
        			"SecurityGroups" : [ { "Ref" : "InstanceSecurityGroup" } ],
        			"KeyName" : "admin@agorg",
        			"ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
				"Tags" : [ {
					"Key" : "env",
					"Value" : "test"
				},
				{
					"Key" : "type",
					"Value" : "orig"
				},
				{
					"Key" : "Name",
					"Value" : "salt.agorgtest.net"
				} ],
				"UserData" : { 
					"Fn::Base64" : { 
						"Fn::Join" : ["", [
				               	"#cloud-config\n",
				                "hostname: salt.agorgtest.net\n",
				                "fqdn: salt.agorgtest.net\n",
				                "manage_etc_hosts: true\n",
				                "repo_update: true\n",
				                "repo_upgrade: all\n",
				                "packages:\n",
				                " - salt-master\n",
				                " - salt-minion\n",
				                " - salt-ssh\n",
				                " - salt-syndic\n",
				                "runcmd:\n",
				                " - sed -i 's/#auto_accept: False/auto_accept: True/g' master\n",
				                " - service salt-master stop\n",
				                " - service salt-master start\n"
						]]
					}
				}
			}
	    		},
	    		"InstanceSecurityGroup" : {
      				"Type" : "AWS::EC2::SecurityGroup",
      				"Properties" : {
        				"GroupDescription" : "Enable SSH access via port 22",
        				"SecurityGroupIngress" : [ 
					{
            					"IpProtocol": "icmp",
				            	"FromPort": "-1",
				            	"ToPort": "-1",
				            	"CidrIp" : "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
				            	"FromPort": "22",
				            	"ToPort": "22",
				            	"CidrIp" : "0.0.0.0/0"
					},
					{
				            	"IpProtocol": "tcp",
				            	"FromPort": "80",
				            	"ToPort": "80",
				            	"CidrIp" : "0.0.0.0/0"
					},
					{
				            	"IpProtocol": "tcp",
				            	"FromPort": "443",
				            	"ToPort": "443",
				            	"CidrIp" : "0.0.0.0/0"
					},
					{
				            	"IpProtocol": "tcp",
				            	"FromPort": "4505",
				            	"ToPort": "4506",
				            	"CidrIp" : "0.0.0.0/0"
					},
					{
				            	"IpProtocol": "tcp",
				            	"FromPort": "10000",
				            	"ToPort": "10000",
				            	"CidrIp" : "0.0.0.0/0"
					} ] 
      				}
    			}
  		},

  	"Outputs" : {
    		"InstanceId" : {
      			"Description" : "InstanceId of the newly created EC2 instance",
      			"Value" : { "Ref" : "Ec2Instance" }
    		},
    		"AZ" : {
      			"Description" : "Availability Zone of the newly created EC2 instance",
      			"Value" : { "Fn::GetAtt" : [ "Ec2Instance", "AvailabilityZone" ] }
    		},
    		"PublicIP" : {
      			"Description" : "Public IP address of the newly created EC2 instance",
      			"Value" : { "Fn::GetAtt" : [ "Ec2Instance", "PublicIp" ] }
    		}
  	}
}
